--- a/ViewModel/ViewModelDemo1/app/src/main/res/layout/activity_main.xml
+++ b/ViewModel/ViewModelDemo1/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="myViewModel"
+            type="com.anushka.viewmodeldemo1.MainActivityViewModel" />
+
+    </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +22,7 @@
         android:textSize="66sp"
         android:textStyle="bold"
         android:typeface="serif"
+        android:text="@{String.valueOf(myViewModel.countData)}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -27,6 +36,7 @@
         android:layout_height="wrap_content"
         android:text="Click Here"
         android:textSize="30sp"
+        android:onClick="@{()->myViewModel.getUpdatedCount()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
