--- a/Navigation/NaviDemo1/app/src/main/res/navigation/nav_graph.xml
+++ b/Navigation/NaviDemo1/app/src/main/res/navigation/nav_graph.xml
@@ -8,15 +8,17 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.ws.skelton.navdemo1.HomeFragment"
-        android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        android:label="fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_secondFragment"
-            app:destination="@id/secondFragment" />
+            app:destination="@id/secondFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
         android:name="com.ws.skelton.navdemo1.SecondFragment"
-        android:label="fragment_second"
-        tools:layout="@layout/fragment_second" />
+        android:label="fragment_second"/>
 </navigation>
